# sail

./: .editorconfig  .env  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: egui.rs  input.rs  main.rs  scenes.rs  state.rs  world.rs
src/components/: info.rs  item.rs  layers.rs  marker.rs  mod.rs  money.rs  name.rs  player.rs  position.rs  sprite.rs  texture.rs
src/entities/: map.rs  mod.rs  player.rs  tile.rs
src/scenes/: end.rs  game.rs  menu.rs  options.rs  pause.rs  trade.rs
src/scenes/game/: camera.rs  tick.rs
src/systems/: hover.rs  inventory.rs  mod.rs  money.rs  movement.rs  render.rs
src/utils/: consts.rs  custom.rs  layer.rs  mod.rs  screen.rs
